# src/main/java/com/dev/servlet/application/transfer/response/UserProfile.java
@@ -1,0 +1,4 @@
+package com.dev.servlet.application.transfer.response;
+
+public record UserProfile(String login, String imgUrl) {
+}
